# cute-script

./: .gitignore  README.md  meson.build
data/: io.github.cute_lights.CuteScript.desktop.in  io.github.cute_lights.CuteScript.gschema.xml  io.github.cute_lights.CuteScript.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: cute-script.gresource.xml  cute-script.in  main.py  meson.build  metadata.py  script_monitor.py  script_row.blp  script_row.py  window.blp  window.py
